Added Pan instructions ui

--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -191,3 +191,19 @@
     }
   }
 }
+
+.stocks-pan-instructions {
+  padding-bottom: 15px;
+
+  .spi-text {
+    font-size: 13px;
+    line-height: 21px;
+    color: #000000;
+    padding-bottom: 10px;
+  }
+
+  img {
+    width: 100%;
+    padding-bottom: 20px;
+  }
+}
