--- a/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
+++ b/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
@@ -134,7 +134,6 @@
     justify-content: center;
     flex-direction: column;
     position: relative;
-    top: -10px;
     cursor: pointer;
   }
 
@@ -148,6 +147,24 @@
     font-size: 10px;
     font-weight: 800;
     margin-top: 3px;
+  }
+
+  .web-upload-container {
+    padding: 30px 0;
+  }
+
+  .camera-upload-container {
+    display: flex;
+    padding: 30px 0;
+
+    .upload-container {
+      width: 50%;
+      text-align: center;
+    }
+
+    .upload-container:first-child {
+      border-right: 1px solid #e1e1e1;
+    }
   }
 
   .sample-document {
