Added ButtonLayout Component

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1396,6 +1396,8 @@ $header-title-font-size: 20px;
   width: 40px;
 }
 
+// TODO: Move this into WVBottomSheet.scss
+
 #bottom-popup .MuiDialog-paper {
   position: fixed;
   width: 100%;
