Added security discliamer in account info

--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -81,7 +81,7 @@
 }
 
 .kyc-account-info {
-  padding-bottom: 30px;
+  padding-bottom: 40px;
 
   .kyc-account-info-header {
     display: flex;
@@ -176,7 +176,7 @@
     }
 
     .kaim-terms {
-      padding-top: 20px;
+      padding: 20px 0 30px;
       display: flex;
       align-items: center;
       column-gap: 10px;
