--- a/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
@@ -64,3 +64,24 @@
   text-transform: uppercase;
   margin-top: 20px;
 }
+
+.kyc-check-compliant-loader-content {
+  .kcclc-img {
+    width: 100%;
+  }
+
+  .kcclc-title {
+    padding: 20px 0 5px;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 24px;
+    color: #0a1d32;
+  }
+
+  .kcclc-subtitle {
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 21px;
+    color: #767e86;
+  }
+}
