--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -207,3 +207,67 @@
     padding-bottom: 20px;
   }
 }
+
+.kyc-document-verification {
+  .kyc-document-verification-header {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    column-gap: 35px;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 32px;
+    color: #161a2e;
+    padding-bottom: 20px;
+  }
+
+  .kyc-document-verification-main {
+    .kdvm-subtitle {
+      font-size: 13px;
+      line-height: 21px;
+      color: #767e86;
+      padding-bottom: 20px;
+    }
+
+    .kdvm-title {
+      font-size: 15px;
+      line-height: 24px;
+      color: #160d2e;
+      font-weight: 600;
+    }
+
+    .kdvm-next-step {
+      background-color: var(--highlight);
+      border-radius: 10px;
+      padding: 16px 20px 16px 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      column-gap: 20px;
+
+      .kdvm-next-step-text {
+        color: #161a2e;
+        font-weight: 600;
+        font-size: 13px;
+        line-height: 21px;
+
+        .kdvm-next-step-message {
+          font-weight: normal;
+          font-size: 10px;
+          line-height: 16px;
+          letter-spacing: 1px;
+          padding-bottom: 3px;
+        }
+      }
+
+      .kdvm-next-step-status {
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 14px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        color: #b39712;
+      }
+    }
+  }
+}
