--- a/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
@@ -1,24 +1,34 @@
+$title-font-size: 20px;
+$subtitle-color: #767E86;
+
+@mixin page-title {
+  font-size: $title-font-size;
+  font-weight: 700;
+  line-height: 32px;
+}
+
+@mixin page-subtitle {
+  color: $subtitle-color;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 21px;
+}
+
 .status-info {
   text-align: center;
 
   .status-info-img {
-    width: 100%;
-    margin-bottom: 30px;
-    min-height: 90px;
+    max-width: 100%;
+    // min-height: 90px;
   }
 
   .status-info-title {
-    font-weight: bold;
-    font-size: 17px;
-    line-height: 27px;
-    color: #161a2e;
+    @include page-title();
+    margin: 30px 0 10px 0;
   }
 
   .status-info-subtitle {
-    font-size: 13px;
-    line-height: 22px;
-    color: #767e86;
-    padding-top: 10px;
+    @include page-subtitle();
   }
 }
 
