--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -293,6 +293,10 @@ body[data-device="web"] {
     #invest-explore-fund-type .top-title{
       margin-top: 0px;
     }
+    .fund-container{
+      width: 100%;
+      padding-bottom: 100px;
+    }
   }
 ////////////End of Iframe Css /////////////////
 
