--- a/react_webviews/src/fund_details/components/Style.scss
+++ b/react_webviews/src/fund_details/components/Style.scss
@@ -259,7 +259,7 @@
 }
 
 .fd-container {
-  padding-bottom: 100px !important;
+  // padding-bottom: 100px !important;
   overflow: hidden;
   margin-bottom: 0px !important;
 }
