--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -585,6 +585,12 @@
   margin-top: 42px;
   cursor: pointer;
 }
+.report-top-text{
+  text-align: left;
+  color: #767E86;
+  margin: 20px 0 30px 0;
+  font-size: 13px;
+}
 }
 .report-detail-header {
   display: flex;
