--- a/react_webviews/src/kyc/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/mini-components/mini-components.scss
@@ -482,3 +482,50 @@
     }
   }
 }
+
+///////////// SAMPLE DOCUMENTS START //////////////
+
+#sample-docs {
+  .title {
+    font-size: 20px;
+    color: #160d2e;
+    font-weight: 600;
+  }
+
+  .description {
+    font-size: 13px;
+    line-height: 21px;
+    color: #767e86;
+    margin: 10px 0 20px 0;
+  }
+
+  .doc fieldset {
+    width: 90%;
+    border: 1px solid #9fa7b0;
+    box-sizing: border-box;
+    border-radius: 7px;
+    margin: 10px 0 30px 0;
+
+    .doc-image {
+      text-align: center;
+    }
+  }
+
+  .doc .doc-name {
+    font-weight: 800;
+    font-size: 13px;
+    line-height: 21px;
+    color: #0a1d32;
+  }
+
+  .doc fieldset legend {
+    font-weight: 500;
+    font-size: 9px;
+    line-height: 9px;
+    color: #9fa7b0;
+    border-bottom: 0px !important;
+    margin-left: 7px;
+  }
+}
+
+///////////// SAMPLE DOCUMENTS END //////////////
