--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1146,7 +1146,7 @@ body[data-device="mobile"] {
     padding-bottom: 22px;
   }
   .dropdown-elements{
-      width: 100%;
+      width: 100% !important;
       border-bottom-width: 1px;
       border-bottom-color: #EFEDF2;
       padding-top: 20px;
@@ -1167,33 +1167,41 @@ body[data-device="mobile"] {
      font-weight: 400;
      line-height: 15.41px;
   }
-  .resume_flag{
-    background-color: #ff6868;
-    letter-spacing: 0.1;
-     font-size: 8px;
-     line-height: 10.06px;
-     position: relative;
-     top: -3px;
-     border-radius: 7px;
-     padding:  2px 4px;
-     margin-top: -30px;
-     color: white;
-     font-weight: 700;
-     width: 40px;
-     left: 6px;
-     height: 14px;
-  }
 }
-.header-title{
+.menu-list-resume_flag{
+  background-color: #ff6868;
+  letter-spacing: 0.1;
+   font-size: 8px;
+   line-height: 10.06px;
+   position: relative;
+   top: -3px;
+   border-radius: 7px;
+   padding:  2px 4px;
+   margin-top: -30px;
+   color: white;
+   font-weight: 700;
+   width: 40px;
+   left: 6px;
+   height: 14px;
+}
+.menulist-img{
+  float: right ;
+}
+.menulist-block{
+  display: flex;
+  width: 100% !important;
+}
+.menulist-header-title{
   font-weight: 500;
   color: #160d2e;
   font-size: 17px;
   line-height: 20.15px;
   margin-bottom: 15px;
  }
- 
-.group-health-insurance-entry{
-  .insurance_plans{
+
+.menulist-dropdown-lists{
+  .menulist-dropdown{
+    width: 100%;
     display:flex;
     align-items: center;
     border-bottom-width: 1px;
@@ -1213,17 +1221,19 @@ body[data-device="mobile"] {
       transform: translateY(-2px);
     }
   }
-    .insurance_plans_types{
+    .menulist-dropdown-types{
       display: flex;
       padding: 0 10px;
+      width: 100% !important;
+      padding: 0px;
     }
-    .insurance_plans_logos{
+    .menulist-dropdown-logos{
       margin-right:25px;
       width: 40px;
       height: 40px;
       border-radius: 2px;
     }
-    .insurance_plans_logos_small{
+    .menulist-dropdown-logos_small{
       margin: 20px 25px 0px 3px;
       width: 40px;
       height: 40px;
@@ -1231,16 +1241,27 @@ body[data-device="mobile"] {
       padding-left: 3px;
       padding-right: 3px;
     }
-    .insurance_plans_logos_text{
+    .menulist-dropdown-logos_text{
       color: #160d2e;
-      font-size:16px;
+      font-size:13px;
       margin-bottom: 5px; 
-      font-weight: 500;
+      font-weight: 400;
+       margin-bottom: 5px;
+       line-height: 15.41px;
+       width: 100%;
     } 
-    .insurance_plans_logos_subtext{
+    .menulist-dropdown-logos_subtext{
      color: #757474;
-     font-weight: 400; 
+     font-weight: 300; 
      font-size: 13.6px;
+    }
+    .menulist-dropdown-line-style{
+      border-bottom-width: 1px;
+       border-bottom-color: #EFEDF2;
+       border-bottom-style: solid;
+       padding-top: 20px;
+       justify-content: space-between;
+       cursor: pointer;
     }
   }
 .Toastify__toast{
