Changed color variable 'grey' to 'steelgrey'

--- a/react_webviews/src/common/ui/BottomSheet/WVBottomSheet.scss
+++ b/react_webviews/src/common/ui/BottomSheet/WVBottomSheet.scss
@@ -33,7 +33,7 @@
     .wv-bcl-subtitle {
       font-size: 13px;
       line-height: 21px;
-      color: var(--grey);
+      color: var(--steelgrey);
       word-break: break-all;
     }
   }
