--- a/react_webviews/src/common/ui/LoadingBottomSheet/WVLoadingBottomSheet.scss
+++ b/react_webviews/src/common/ui/LoadingBottomSheet/WVLoadingBottomSheet.scss
@@ -38,7 +38,7 @@
     }
     
     .wv-lbc-subtitle {
-      color: var(--grey);
+      color: var(--steelgrey);
       font-size: 13px;
       line-height: 21px;
       text-transform: capitalize;
