--- a/react_webviews/src/common/ui/Select/WVSelect.scss
+++ b/react_webviews/src/common/ui/Select/WVSelect.scss
@@ -27,7 +27,7 @@
   
   .wv-select-item-subtitle {
     font-size: 15px;
-    color: var(--grey);
+    color: var(--steelgrey);
     line-height: 1.4;
   }
 
