Fixes for Webapp Rewrite RC-01 (Risk Profiler issues)
QA-3722, QA-3728, QA-3730,  QA-3732, QA-3734, QA-3785, QA-3809, QA-3815,

--- a/react_webviews/src/common/theme/Style.css
+++ b/react_webviews/src/common/theme/Style.css
@@ -71,9 +71,8 @@ body[data-device="web"] .quote-filter-dialog-head {
   max-width: var(--desktop-width);
 }
 body[data-device="web"] .MuiDialogActions-root {
-  margin: 0 auto;
+  margin: 20px auto;
   width: fit-content;
-  margin-bottom: 20px;
 }
 body[data-device="web"] .FooterImage {
   width: auto;
