--- a/react_webviews/src/dashboard/Recommendation/RecommendationTopCard.scss
+++ b/react_webviews/src/dashboard/Recommendation/RecommendationTopCard.scss
@@ -32,6 +32,8 @@
         line-height: 18px;
         font-weight: normal;
         margin-bottom: 2px;
+        display: flex;
+        align-items: baseline;
         
         img.info-icn {
           margin-left: 6px;
