added support for Iframe Loader

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -103,6 +103,7 @@ body[data-device="web"] {
       min-width: 440px;
     }
     .Loader {
+      top: 80px !important;
       max-width: 100%;
     }
     .nfo-checkout{
