Fixed logo and menu css for noBackIcon check

--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -190,3 +190,18 @@
   font-weight: 600;
   line-height: 1.5;
 }
+
+.invest-landing-background{
+  background: #FFFFFF !important;
+  .header-title-page{
+    background: #FFFFFF !important;
+  }
+}
+
+.invest-landing-header{
+  background-color: var(--primary) !important;
+}
+
+.invest-landing-partner-header{
+  background-color: var(--header-background) !important;
+}
