--- a/react_webviews/src/dashboard/Recommendation/Recommendation.scss
+++ b/react_webviews/src/dashboard/Recommendation/Recommendation.scss
@@ -1,5 +1,10 @@
+.invest-recommendations-container {
+  background-color: #f8f8f8;
+}
+
 .recommendation-page {
-  margin: 0 -20px;
+  background-color: white;
+  padding-top: 20px;
 }
 
 .recommendation-page {
@@ -12,7 +17,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  padding: 0 20px 30px;
+  padding: 0 20px 10px;
 
   .recommendations-header {
     width: 100%;
@@ -67,7 +72,18 @@
 }
 
 .recommendations-disclaimers {
-  margin: 60px 0;
+  padding: 0 20px;
+  margin: 0 0 60px 0;
+  background-color: #F8F8F8;
+
+  .recommendations-paper-cut {
+    background-image: url(../../assets/white_triangle_bg.png);
+    background-size: 30px;
+    background-repeat: repeat-x;
+    background-position: top;
+    height: 65px;
+    margin: 0 -20px;
+  }
 }
 
 .recommendations-disclaimer-morning {
