--- a/react_webviews/src/kyc/Digilocker/Digilocker.scss
+++ b/react_webviews/src/kyc/Digilocker/Digilocker.scss
@@ -92,11 +92,12 @@
     width: 100%;
     padding: 7px;
     border-radius: 5px;
+    height: 50px;
     letter-spacing: 1px;
   }
 
   .footer .MuiButton-label {
-    font-size: 16px;
+    font-size: 12px;
     letter-spacing: 1px;
     font-weight: bold;
     padding: 7px 0;
