--- a/react_webviews/src/kyc/Address/commonStyles.scss
+++ b/react_webviews/src/kyc/Address/commonStyles.scss
@@ -19,6 +19,7 @@
         padding: 8px 10px 8px 10px;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         border-radius: 4px;
         text-align: left;
         font-size: 13px;
@@ -30,6 +31,7 @@
 
         .check-icon {
           width: 10px;
+          height: 10px;
         }
       }
 
