--- a/react_webviews/src/dashboard/Recommendation/Recommendation.scss
+++ b/react_webviews/src/dashboard/Recommendation/Recommendation.scss
@@ -18,6 +18,7 @@
     width: 100%;
     display: flex;
     align-items: center;
+    padding-bottom: 10px;
     
     .recommendation-title {
       font-weight: 600;
@@ -60,8 +61,9 @@
     line-height: 22px;
     padding: 10px 0px;
     color: rgb(74, 74, 74);
+
     .amount-per-month{
-      font-size: 12.75px;
+      font-size: 12px;
     }
   }
 }
