--- a/react_webviews/src/reports/components/Fundwise/commonStyles.scss
+++ b/react_webviews/src/reports/components/Fundwise/commonStyles.scss
@@ -127,6 +127,7 @@
 .reports-fundswise-transactions {
   line-height: 1.5;
   color: #333333;
+  padding-bottom: 20px;
 
   p {
     font-size: 14px;
