--- a/react_webviews/src/dashboard/Invest/commonStyles.scss
+++ b/react_webviews/src/dashboard/Invest/commonStyles.scss
@@ -70,17 +70,16 @@
       width: 100%;
       color: white;
       margin: 0px;
-      padding: 5px 15px;
+      padding: 10px !important;
       font-size: 14px !important;
       line-height: 36px;
       font-weight: bold;
-      height: 45px !important;
     }
 
     .invest-dialog-transparent-button {
       color: rgb(33, 33, 33);
-      height: 42px !important;
       font-size: 14px !important;
+      padding: 10px !important;
       font-weight: normal;
       width: 100px !important;
       float: right;
