--- a/react_webviews/src/dashboard/Invest/components/NFO/FundDetail.scss
+++ b/react_webviews/src/dashboard/Invest/components/NFO/FundDetail.scss
@@ -66,8 +66,7 @@
     line-height: 1.5;
     width: 90px !important;
     min-width: 90px;
-    padding: 0 6px !important;
-    height: 40px;
+    padding: 10px 6px !important;
     font-weight: 400;
     font-size: 14px !important;
   }
