--- a/react_webviews/src/dashboard/Invest/components/NFO/Funds.scss
+++ b/react_webviews/src/dashboard/Invest/components/NFO/Funds.scss
@@ -61,7 +61,7 @@
             margin: 6px 8px;
             width: 90px !important;
             min-width: 90px;
-            height: 40px;
+            padding: 10px !important;
           }
         }
       }
