--- a/react_webviews/src/reports/components/Summary/commonStyles.scss
+++ b/react_webviews/src/reports/components/Summary/commonStyles.scss
@@ -96,10 +96,9 @@
           font-size: 16px;
         }
 
-        button {
-          background-color: var(--secondary);
-          color: white;
-          font-weight: bold;
+        .reports-invest-button {
+          width: fit-content;
+          padding: 10px !important;
         }
       }
 
