--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -31,11 +31,10 @@
   .invest-landing-button {
     font-weight: 800;
     font-size: 11px !important;
-    padding: 0px 10px;
+    padding: 10px !important;
     width: 140px !important;
     margin: 6px 8px 6px 0;
     letter-spacing: 0.01em;
-    height: 40px !important;
   }
 
   .invest-card {
