--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1267,7 +1267,7 @@ padding-right: 12px !important;
   background-color: rgb(231, 248, 236);
   border-radius: 6px;
   margin: 20px 20px 30px 20px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 0 4px rgba(192, 192, 192, 0.4);
   p{margin: 0}
   .status-bar{
     display: flex;
