--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -533,6 +533,7 @@
   }
 }
 .Container.report-list-page {
+  padding-top: 12px;
   overflow: visible;
   ::-webkit-scrollbar{
     display: none !important;
@@ -584,7 +585,7 @@
     flex: 1;
     text-align: center;
     font-family: 'Rubik', sans-serif;
-    padding-bottom: 20px;
+    padding-bottom: 5px;
     color: #161A2E;
     font-size: 13px;
     font-weight: 500;
