--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -93,6 +93,7 @@
   .sub-title {
     margin-top: -15px;
     font-size: 13px;
+    line-height: 21px;
   }
 
   .pan-alert {
@@ -106,9 +107,14 @@
     flex-wrap: nowrap;
   }
 
+  .instructions-container {
+    margin: 10px;
+  }
+
   .ipv_footer_instructions {
-    margin-top: 10px;
-    line-height: 1.5;
+    font-size: 15px;
+    line-height: 24px;
+    text-align: left;
   }
 
   .ipv_code {
@@ -116,8 +122,9 @@
     font-size: 26px;
     line-height: 31px;
     letter-spacing: 7.5px;
-    color: #331c6b;
+    color: var(--primary);
     margin-top: 10px;
+    text-align: left;
   }
 
   .flex-between-center {
@@ -185,6 +192,10 @@
     display: block;
     margin: 70px auto 20px auto;
     width: 143px;
+  }
+
+  .video-controls {
+    max-width: 100%;
   }
 }
 
