referral link added

--- a/react_webviews/src/partner-referral/partner-referral.scss
+++ b/react_webviews/src/partner-referral/partner-referral.scss
@@ -1,7 +1,7 @@
 .partner-referral-url{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     background-color: rgba(238, 238, 238, 0.3);
     margin-top: 15px;
     .referral-url-left{
