removed unwanted code and some other changes

--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -128,7 +128,7 @@
   }
 
   .flex-between-center {
-    margin-top: 14px;
+    margin-top: 40px;
 
     .know_more {
       font-size: 14px;
@@ -137,7 +137,8 @@
 
     .link {
       color: var(--secondary);
-      font-size: 10px;
+      font-size: 12px;
+      font-weight: bold;
       margin: 5px 0 0;
       cursor: pointer;
     }
