--- a/react_webviews/src/partner-referral/partner-referral.scss
+++ b/react_webviews/src/partner-referral/partner-referral.scss
@@ -11,6 +11,7 @@
     }
     .referral-url-right{
         padding: 5px;
+        cursor: pointer;
         background-color: rgba(238, 238, 238, 0.7);
     }
 }
