Minor issue fixes for common components

--- a/react_webviews/src/common/ui/InfoBubble/WVInfoBubble.scss
+++ b/react_webviews/src/common/ui/InfoBubble/WVInfoBubble.scss
@@ -31,8 +31,8 @@
       text-align: left;
       font-size: 13px;
       line-height: 21px;
-      color: #767E86;
-      word-break: break-all;
+      color: var(--steelgrey);
+      word-break: break-word;
     }
   }
 }
