--- a/react_webviews/src/common/ui/BottomSheet/WVBottomSheet.scss
+++ b/react_webviews/src/common/ui/BottomSheet/WVBottomSheet.scss
@@ -27,14 +27,14 @@
       line-height: 32px;
       color: var(--dark);
       margin-top: 10px;
-      word-break: break-all;
+      word-break: break-word;
     }
     
     .wv-bcl-subtitle {
       font-size: 13px;
       line-height: 21px;
       color: var(--steelgrey);
-      word-break: break-all;
+      word-break: break-word;
     }
   }
 
